fix up guide spacing

--- a/frontend/src/styling/createproject.css
+++ b/frontend/src/styling/createproject.css
@@ -115,7 +115,7 @@
 }
 .browse-button {
   display: inline-block;
-  margin-right: 30px;
+  margin: 30px;
   width: 290px;
   height: 155px;
   left: 735px;
